pi-cluster/deployments/clockify/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clockify
  namespace: clockify
  labels:
    app: clockify
spec:
  type: ClusterIP
  selector:
    app: clockify
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http1
