pi-cluster/deployments/clockify/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clockify
  namespace: clockify
  labels:
    app: clockify
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://auth.charlieegan3.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.charlieegan3.com/oauth2/start?rd=https://clockify.home.charlieegan3.com"
spec:
  tls:
  - hosts:
    - clockify.home.charlieegan3.com
    secretName: clockify-tls
  rules:
  - host: clockify.home.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: clockify
          servicePort: 80
